[package]
name = "space-elevator"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_elevator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "space-elevator"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_asset",
  "bevy_winit",
  "bevy_text",
  "bevy_ui",
  "bevy_sprite",
  "x11",
  "webgl2",
  "png",
] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document"] }
rand = { version = "0.8", features = ["wasm-bindgen"] }

[profile.release]
opt-level = "z"
lto        = true
codegen-units = 1
