[package]
name = "space-elevator"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_elevator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "space-elevator"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_asset",
  "bevy_winit",
  "bevy_text",
  "bevy_ui",
  "bevy_sprite",
  "x11",
  "webgl2",
  "png",
] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document"] }
rand = "0.8"
# Force getrandom 0.2 to use JS backend on WASM (used by rand 0.8)
getrandom = { version = "0.2", features = ["js"] }
# Force getrandom 0.3 to use JS backend on WASM (transitive dep)
getrandom3 = { package = "getrandom", version = ">=0.3, <0.4", features = ["wasm_js"] }
# Force getrandom 0.4 to use JS backend on WASM (transitive dep)
getrandom4 = { package = "getrandom", version = ">=0.4, <0.5", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto        = true
codegen-units = 1
